--- a/about.html
+++ b/about.html
@@ -70,7 +70,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="team-single.html">Team Details</a>
+            
             <a class="dropdown-item" href="career.html">Career</a>
             <a class="dropdown-item" href="career-single.html">Career Details</a>
             <a class="dropdown-item" href="blog-single.html">Blog Details</a>
@@ -79,7 +79,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contáctanos</a>
         </li>
       </ul>
     </div>
@@ -164,57 +164,7 @@
 </section>
 <!-- /video -->
 
-<!-- team -->
-<section class="section">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-10 mx-auto text-center">
-        <h2>Nuestro Team</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor</p>
-        <div class="section-border"></div>
-      </div>
-    </div>
-    <div class="row no-gutters">
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="images/team/member-1.jpg" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Sara Adams</a></h4>
-            <i>Designer</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="images/team/member-2.jpg" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Tom Bills</a></h4>
-            <i>Developer</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="images/team/member-3.jpg" alt="team-member" class="card-img-top">
-          <div class="card-body text-center position-relative zindex-1">
-            <h4><a class="text-dark" href="team-single.html">Anna Walle</a></h4>
-            <i>Manager</i>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-3 col-sm-6">
-        <div class="card hover-shadow">
-          <img src="images/team/member-4.jpg" alt="team-member" class="card-img-top">
-          <div class="card-body text-center">
-            <h4>Devid Json</h4>
-            <i>CEO</i>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /team -->
+
 
 <!-- testimonial-slider -->
 <section class="section bg-secondary">
@@ -326,11 +276,11 @@
         </div>
         <div class="col-md-6">
           <div class="bg-white p-4">
-            <h3>Contact us</h3>
+            <h3>Contáctanos</h3>
             <form action="#">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Full name">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Email address">
-              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Message"></textarea>
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Nombre completo">
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Correo eléctronico">
+              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Mensaje"></textarea>
               <button class="btn btn-primary" type="submit">Send</button>
             </form>
           </div>
