--- a/career.html
+++ b/career.html
@@ -70,7 +70,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="team-single.html">Team Details</a>
+            
             <a class="dropdown-item" href="career.html">Career</a>
             <a class="dropdown-item" href="career-single.html">Career Details</a>
             <a class="dropdown-item" href="blog-single.html">Blog Details</a>
@@ -79,7 +79,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contáctanos</a>
         </li>
       </ul>
     </div>
@@ -187,11 +187,11 @@
         </div>
         <div class="col-md-6">
           <div class="bg-white p-4">
-            <h3>Contact us</h3>
+            <h3>Contáctanos</h3>
             <form action="#">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Full name">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Email address">
-              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Message"></textarea>
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Nombre completo">
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Correo eléctronico">
+              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Mensaje"></textarea>
               <button class="btn btn-primary" type="submit">Send</button>
             </form>
           </div>
