--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Pages</a>
           <div class="dropdown-menu">
             <a class="dropdown-item" href="team.html">Team</a>
-            <a class="dropdown-item" href="team-single.html">Team Details</a>
+            
             <a class="dropdown-item" href="career.html">Career</a>
             <a class="dropdown-item" href="career-single.html">Career Details</a>
             <a class="dropdown-item" href="blog-single.html">Blog Details</a>
@@ -82,7 +82,7 @@
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="contact.html">Contáctanos</a>
         </li>
       </ul>
     </div>
@@ -96,7 +96,8 @@
     <div class="row">
       <div class="col-12 text-center">
         <img class="rotate-scale-down" src="images/icon.png" alt="icon OrionWare">
-        <h1 class="display-1 text-white font-weight-bold font-primary">OrionWare</h1>
+        <h1 class="display-1 text-white font-weight-bold font-name">OrionWare</h1>
+        <h2 class="display-2 text-white font-weight-bold font-subname">studio</h1>
       </div>
     </div>
   </div>
@@ -359,19 +360,6 @@
 </section>
 <!-- /project -->
 
-<!-- call to action -->
-<section>
-  <div class="container section-sm overlay-secondary-half bg-cover" data-background="images/backgrounds/cta-bg.jpg">
-  <div class="row">
-    <div class="col-lg-8 offset-lg-1">
-      <h2 class="text-gradient-primary">Let's Start With Us!</h2>
-      <p class="h4 font-weight-bold text-white mb-4">Lorem ipsum dolor sit amet, magna habemus ius ad</p>
-      <a href="contact.html" class="btn btn-lg btn-primary">Let’s talk</a>
-    </div>
-  </div>
-</div>
-</section>
-<!-- /call to action -->
 
 <!-- pricing -->
 <section class="section pb-0">
@@ -518,11 +506,11 @@
         </div>
         <div class="col-md-6">
           <div class="bg-white p-4">
-            <h3>Contact us</h3>
+            <h3>Contáctanos</h3>
             <form action="#">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Full name">
-              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Email address">
-              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Message"></textarea>
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Nombre completo">
+              <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Correo eléctronico">
+              <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Mensaje"></textarea>
               <button class="btn btn-primary" type="submit">Send</button>
             </form>
           </div>
