Add "Proyecto catedra" section

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
           <a class="nav-link" href="services.html">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="blog.html">Save Our Pets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portafolio</a>
@@ -316,29 +316,6 @@
 </section>
 <!-- /project -->
 
-<!-- clients -->
-<section class="section-sm">
-  <div class="container">
-    <div class="row">
-      <div class="col-12">
-        <div class="client-logo-slider d-flex align-items-center">
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-1.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-2.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-3.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-4.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-5.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-1.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-2.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-3.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-4.png" alt="client-logo"></a>
-          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-5.png" alt="client-logo"></a>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- /clients -->
-
 <!-- footer -->
 <footer class="bg-secondary position-relative">
   <img src="images/backgrounds/map.png" class="img-fluid overlay-image" alt="">
@@ -351,7 +328,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
@@ -361,7 +338,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
