--- a/services.html
+++ b/services.html
@@ -61,7 +61,7 @@
           <a class="nav-link" href="services.html">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="blog.html">Save Our Pets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portafolio</a>
@@ -242,6 +242,111 @@
 </section>
 <!-- /feature -->
 
+<!-- pricing -->
+<section class="section pb-0">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 mx-auto text-center">
+        <h2>Nuestros planes</h2>
+        <div class="section-border"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+        <div class="card bottom-shape bg-secondary pt-4 pb-5">
+          <div class="card-body text-center">
+            <h4 class="text-white">Básico</h4>
+            <p class="text-light mb-4">Sitio web básico y sencillo</p>
+            <p class="text-white mb-4">$ <span class="display-3 font-weight-bold vertical-align-middle">125</span></p>
+            <ul class="list-unstyled mb-5">
+              <li class="text-white mb-3">Sitio web responsivo</li>
+              <li class="text-white mb-3">Potentes métricas del sitio web</li>
+              <li class="text-white mb-3"> Dominio personalizado (costo adicional)</li>
+              <li class="text-white mb-3"> Atención al cliente</li>
+              <li class="text-white mb-3">&nbsp;</li>
+              <li class="text-white mb-3">&nbsp;</li>
+              <li class="text-white mb-3">&nbsp;</li>
+              <li class="text-white mb-3">&nbsp;</li>
+            </ul>
+            <a href="#" class="btn btn-outline-light">Pruebalo ahora</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+        <div class="card bottom-shape bg-secondary pt-4 pb-5">
+          <div class="card-body text-center">
+            <h4 class="text-white">Micro</h4>
+            <p class="text-light mb-4">Sitio web moderno</p>
+            <p class="text-white mb-4">$ <span class="display-3 font-weight-bold vertical-align-middle">350</span></p>
+            <ul class="list-unstyled mb-5">
+              <li class="text-white mb-3">Aplicación web con framework</li>
+              <li class="text-white mb-3">Potentes métricas de SEO</li>
+              <li class="text-white mb-3"> Dominio personalizado gratuito</li>
+              <li class="text-white mb-3"> Servicio de mantenimiento</li>
+              <li class="text-white mb-3"> Atención al cliente 24/7</li>
+              <li class="text-white mb-3">Base de datos integrada</li>
+              <li class="text-white mb-3">Comercio electrónico integrado</li>
+              <li class="text-white mb-3">&nbsp;</li>
+            </ul>
+            <a href="#" class="btn btn-outline-light">Pruebalo ahora</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-lg-4 col-sm-6 mb-4 mb-lg-0">
+        <div class="card bottom-shape bg-secondary pt-4 pb-5">
+          <div class="card-body text-center">
+            <h4 class="text-white">Avanzado</h4>
+            <p class="text-light mb-4">Desarrollo móvil</p>
+            <p class="text-white mb-4">$ <span class="display-3 font-weight-bold vertical-align-middle">795</span></p>
+            <ul class="list-unstyled mb-5">
+              <li class="text-white mb-3">Aplicaciones híbridas y nativas</li>
+              <li class="text-white mb-3">Conexión API cifrada de punto a punto</li>
+              <li class="text-white mb-3"> Marketing en redes sociales</li>
+              <li class="text-white mb-3"> Servicio de mantenimiento</li>
+              <li class="text-white mb-3"> Atención al cliente 24/7</li>
+              <li class="text-white mb-3">Base de datos integrada</li>
+              <li class="text-white mb-3">Comercio electrónico integrado</li>
+              <li class="text-white mb-3">Vender productos ilimitados</li>
+            </ul>
+            <a href="#" class="btn btn-outline-light">Pruebalo ahora</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /pricing -->
+
+<!-- clients -->
+<section class="section-sm">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-10 mx-auto text-center">
+        <h2 class="section-title">Nuestros clientes</h2>
+        <div class="section-border"></div>
+      </div>
+    </div>
+
+    <div class="row">
+      <div class="col-12">
+        <div class="client-logo-slider d-flex align-items-center">
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-1.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-2.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-3.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-4.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-5.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-1.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-2.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-3.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-4.png" alt="client-logo"></a>
+          <a href="#" class="text-center d-block outline-0 p-4"><img class="d-unset img-fluid" src="images/clients-logo/clients-logo-5.png" alt="client-logo"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- /clients -->
+
 <!-- footer -->
 <footer class="bg-secondary position-relative">
   <img src="images/backgrounds/map.png" class="img-fluid overlay-image" alt="">
@@ -254,7 +359,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
@@ -264,7 +369,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
