--- a/blog.html
+++ b/blog.html
@@ -61,7 +61,7 @@
           <a class="nav-link" href="services.html">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="blog.html">Save Our Pets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portafolio</a>
@@ -91,7 +91,7 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center">
-        <h1 class="display-1 text-white font-weight-bold font-primary">Nuestro Blog</h1>
+        <h1 class="display-1 text-white font-weight-bold font-primary">Save Our Pets</h1>
       </div>
     </div>
   </div>
@@ -218,7 +218,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
@@ -228,7 +228,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
