--- a/career.html
+++ b/career.html
@@ -61,7 +61,7 @@
           <a class="nav-link" href="services.html">Servicios</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="blog.html">Save Our Pets</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="portfolio.html">Portafolio</a>
@@ -171,7 +171,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
@@ -181,7 +181,7 @@
             <li><a href="#" class="text-light d-block mb-3">Service</a></li>
             <li><a href="#" class="text-light d-block mb-3">Conatact</a></li>
             <li><a href="#" class="text-light d-block mb-3">Acerca de us</a></li>
-            <li><a href="#" class="text-light d-block mb-3">Blog</a></li>
+            <li><a href="#" class="text-light d-block mb-3">Save Our Pets</a></li>
             <li><a href="#" class="text-light d-block mb-3">Support</a></li>
           </ul>
         </div>
