Add Mockups png & change button "Send" to "Enviar"

--- a/blog-single.html
+++ b/blog-single.html
@@ -196,7 +196,7 @@
             <input type="email" name="Email" id="Email" class="form-control mb-4 mb-lg-0 border" placeholder="Email">
           </div>
           <div class="col-md-2">
-            <button type="submit" class="btn btn-secondary rounded-0">Send</button>
+            <button type="submit" class="btn btn-secondary rounded-0">Enviar</button>
           </div>
         </form>
       </div>
@@ -285,7 +285,7 @@
               <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Nombre completo">
               <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Correo eléctronico">
               <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Mensaje"></textarea>
-              <button class="btn btn-primary" type="submit">Send</button>
+              <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
           </div>
         </div>
