--- a/contact.html
+++ b/contact.html
@@ -133,7 +133,7 @@
               <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Nombre completo">
               <input type="text" id="name" name="name" class="form-control mb-4 px-0" placeholder="Correo eléctronico">
               <textarea name="message" id="message" class="form-control mb-4 px-0" placeholder="Mensaje"></textarea>
-              <button class="btn btn-primary" type="submit">Send</button>
+              <button class="btn btn-primary" type="submit">Enviar</button>
             </form>
           </div>
         </div>
