Errores de ortografía

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               <i class="icon-lg icon-watermark text-white ti-announcement"></i>
             </div>
             <h4 class="mb-4">Marketing</h4>
-            <p>Promoción y dsitribución de los serviccios a tráves de medios publicitarios y digitales.</p>
+            <p>Promoción y distribución de los servicios a tráves de los diferentes medios publicitarios y digitales.</p>
           </div>
         </div>
       </div>
