Imagenes de team y projectos

--- a/blog.html
+++ b/blog.html
@@ -223,7 +223,8 @@
 
 
             <h4 style="margin-top:1em;">Costo de la aplicación móvil</h4>
-            <p></p>
+            <p>Será una aplicación gratuita que permita reportar mascotas callejeras generando una excelente forma de fomentar la responsabilidad social en la comunidad. No sólo ayudaría a solucionar el problema de los animales abandonados en las calles, sino que también contribuiría al bienestar animal y al mejoramiento del entorno urbano. </p>
+            <p>Al proporcionar esta herramienta de manera gratuita, se promueve el uso masivo de la aplicación, lo que a su vez aumenta la cantidad de reportes recibidos y facilita la identificación y posterior rescate de estos animales. Además, al tener un acceso libre y sencillo, se asegura que la aplicación sea utilizada por personas de todos los niveles socioeconómicos, lo que permite que más personas se involucren en el cuidado y protección de los animales en situación de calle.</p>
           </div>
         </div>
       </div>
