--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
     <div class="row no-gutters mb-5">
       <div class="col-lg-3 col-sm-6">
         <div class="card hover-shadow">
-          <img src="images/team/member-2.jpg" alt="team-member" class="card-img-top">
+          <img src="images/team/member-3.jpg" alt="team-member" class="card-img-top">
           <div class="card-body text-center position-relative zindex-1">
             <h4><a class="text-dark" href="#">Santos Lemus</a></h4>
             <i>Developer</i>
@@ -178,7 +178,7 @@
       
       <div class="col-lg-3 col-sm-6">
         <div class="card hover-shadow">
-          <img src="images/team/member-3.jpg" alt="team-member" class="card-img-top">
+          <img src="images/team/member-4.jpg" alt="team-member" class="card-img-top">
           <div class="card-body text-center position-relative zindex-1">
             <h4><a class="text-dark" href="#">William Grande</a></h4>
             <i>Developer</i>
@@ -207,7 +207,7 @@
 
       <div class="col-lg-3 col-sm-6">
         <div class="card">
-          <img src="images/team/member-4.jpg" alt="team-member" class="card-img-top">
+          <img src="images/team/member-5.jpg" alt="team-member" class="card-img-top">
           <div class="card-body text-center position-relative zindex-1">
             <h4><a class="text-dark" href="#">Bryan Marroquín</a></h4>
             <i>Designer</i>
@@ -303,7 +303,7 @@
         <div class="project-item">
           <img src="images/project/project-7.jpg" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">APEPAES 2017</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
