Agregando foto rcla

--- a/services.html
+++ b/services.html
@@ -420,7 +420,7 @@
               <div class="card-body px-5 py-4">
                 <img src="images/testimonial/user-1.jpg" alt="user-1" class="img-fluid rounded-circle mb-4">
                 <h4 class="text-secondary">Ivan Stoker</h4>
-                <p>“DevSoftre superó nuestras expectativas. El software que desarrollaron para nosotros fue entregado a tiempo, con una excelente calidad y totalmente personalizado para nuestras necesidades. Su equipo de programadores y diseñadores fue muy creativo y siempre estuvo dispuesto a escuchar nuestras ideas. ¡Muy recomendable!”</p>
+                <p>“Orionware Studio superó nuestras expectativas. El software que desarrollaron para nosotros fue entregado a tiempo, con una excelente calidad y totalmente personalizado para nuestras necesidades. Su equipo de programadores y diseñadores fue muy creativo y siempre estuvo dispuesto a escuchar nuestras ideas. ¡Muy recomendable!”</p>
               </div>
             </div>
           </div>
@@ -429,7 +429,7 @@
               <div class="card-body px-5 py-4">
                 <img src="images/testimonial/user-2.jpg" alt="user-2" class="img-fluid rounded-circle mb-4">
                 <h4 class="text-secondary">Melissa Christina</h4>
-                <p>“Recomiendo ampliamente los servicios de DevSoftre. Su equipo de programadores y diseñadores son altamente capacitados y eficientes, y su atención al cliente es excelente. Nos ayudaron a desarrollar una aplicación móvil que superó nuestras expectativas, con una interfaz amigable y atractiva para nuestros usuarios. Definitivamente, seguiré trabajando con ellos en futuros proyectos.”</p>
+                <p>“Recomiendo ampliamente los servicios de Orionware Studio. Su equipo de programadores y diseñadores son altamente capacitados y eficientes, y su atención al cliente es excelente. Nos ayudaron a desarrollar una aplicación móvil que superó nuestras expectativas, con una interfaz amigable y atractiva para nuestros usuarios. Definitivamente, seguiré trabajando con ellos en futuros proyectos.”</p>
               </div>
             </div>
           </div>
@@ -438,7 +438,7 @@
               <div class="card-body px-5 py-4">
                 <img src="images/testimonial/user-3.jpg" alt="user-3" class="img-fluid rounded-circle mb-4">
                 <h4 class="text-secondary">William Horton</h4>
-                <p>“Estamos muy agradecidos con DevSoftre por el desarrollo del software que nos permitió optimizar nuestros procesos de producción. Gracias a su trabajo, logramos mejorar la eficiencia de nuestra empresa y reducir costos en un 30%. Sin duda, los recomendaría a cualquier empresa que busque mejorar su productividad.”</p>
+                <p>“Estamos muy agradecidos con Orionware Studio por el desarrollo del software que nos permitió optimizar nuestros procesos de producción. Gracias a su trabajo, logramos mejorar la eficiencia de nuestra empresa y reducir costos en un 30%. Sin duda, los recomendaría a cualquier empresa que busque mejorar su productividad.”</p>
               </div>
             </div>
           </div>
@@ -447,7 +447,7 @@
               <div class="card-body px-5 py-4">
                 <img src="images/testimonial/user-4.jpg" alt="user-4" class="img-fluid rounded-circle mb-4">
                 <h4 class="text-secondary">Jackson Lane</h4>
-                <p>“Nuestra experiencia con DevSoftre ha sido excepcional. Su equipo de profesionales nos brindó una solución de software personalizada y adaptada a nuestras necesidades, lo que nos permitió reducir nuestros tiempos de respuesta y mejorar la satisfacción de nuestros clientes. Estamos muy contentos con los resultados y sin duda trabajaremos con ellos en futuros proyectos.”</p>
+                <p>“Nuestra experiencia con Orionware Studio ha sido excepcional. Su equipo de profesionales nos brindó una solución de software personalizada y adaptada a nuestras necesidades, lo que nos permitió reducir nuestros tiempos de respuesta y mejorar la satisfacción de nuestros clientes. Estamos muy contentos con los resultados y sin duda trabajaremos con ellos en futuros proyectos.”</p>
               </div>
             </div>
           </div>
@@ -456,7 +456,7 @@
               <div class="card-body px-5 py-4">
                 <img src="images/testimonial/user-5.jpg" alt="user-5" class="img-fluid rounded-circle mb-4">
                 <h4 class="text-secondary">Kimberly Lange</h4>
-                <p>“Nos sentimos muy satisfechos con la calidad del servicio y la solución de software desarrollada por DevSoftre. Su equipo siempre estuvo atento a nuestras necesidades y nos brindó un excelente soporte durante todo el proceso. La solución de software que nos entregaron fue muy fácil de usar y permitió una mayor eficiencia en nuestros procesos. Sin duda, recomiendo sus servicios.”</p>
+                <p>“Nos sentimos muy satisfechos con la calidad del servicio y la solución de software desarrollada por Orionware Studio. Su equipo siempre estuvo atento a nuestras necesidades y nos brindó un excelente soporte durante todo el proceso. La solución de software que nos entregaron fue muy fácil de usar y permitió una mayor eficiencia en nuestros procesos. Sin duda, recomiendo sus servicios.”</p>
               </div>
             </div>
           </div>
