Agregando proyecto al portafolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -105,13 +105,13 @@
           <div class="card-body text-center">
             <h4>Roberto Carlos López Abarca</h4>            
           </div>
-          <p class="font-weight-bold">Programador junior Full Stack con ocho meses de experiencia en el desarrollo de aplicaciones web. Tiene experiencia en lenguajes de programación como JavaScript, Python, y Ruby, y ha trabajado en varios proyectos en los que ha desempeñado el papel de desarrollador tanto de frontend como de backend.</p>
+          <p class="font-weight-bold">Programador junior Full Stack con 2 años de experiencia en el desarrollo de aplicaciones web. Tiene experiencia en lenguajes de programación como JavaScript, PHP, Python, C#, C++ y ha trabajado en varios proyectos en los que ha desempeñado el papel de desarrollador tanto de frontend como de backend.</p>
           <p class="font-weight-bold">Roberto está interesado en aprender nuevas tecnologías y herramientas para mejorar su habilidad como programador Full Stack.</p>
           <p>Proyectos desarrollados: </p>
           <ol>
             <li>YumeStore</li>
             <li>Save Our Pets</li>
-            <li>3</li>
+            <li>Tienda San Antonio</li>
           </ol>
         </div>
       </div>
@@ -310,9 +310,9 @@
       </div>
       <div class="col-lg-4 col-md-6 shuffle-item">
         <div class="project-item">
-          <img src="images/project/project-1.png" alt="project-image" class="img-fluid w-100">
+          <img src="images/project/tienda.png" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">Tienda San Antonio</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
