Agregando imagenes de proyectos

--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
           <ol>
             <li>YumeStore</li>
             <li>Save Our Pets</li>
-            <li>3</li>
+            <li>APEPAES</li>
           </ol>
         </div>
       </div>
@@ -166,9 +166,8 @@
           <p class="font-weight-bold">Santos está interesado en ampliar sus habilidades y aprender nuevos lenguajes de programación y marcos de trabajo.</p>
           <p>Proyectos desarrollados: </p>
           <ol>
-            <li>1</li>
-            <li>2</li>
-            <li>3</li>
+            <li>Control de pasantías</li>
+            <li>*Save Our Pets</li>
           </ol>
         </div>
       </div>
@@ -195,8 +194,8 @@
           <p>Proyectos desarrollados: </p>
           <ol>
             <li>Save Our Pets</li>
-            <li>2</li>
-            <li>3</li>
+            <li>Game Booster</li>
+            <li>La cuponera</li>
           </ol>
         </div>
       </div>
@@ -229,7 +228,7 @@
             <ol>
               <li>YumeStore</li>
               <li>Save Our Pets</li>
-              <li>3</li>
+              <li>La cuponera</li>
             </ol>
         </div>
       </div>
@@ -267,7 +266,7 @@
         <div class="project-item">
           <img src="images/project/project-3.jpg" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">Game Booster</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
@@ -276,7 +275,7 @@
         <div class="project-item">
           <img src="images/project/project-4.jpg" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">Control de pasantías</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
@@ -294,7 +293,7 @@
         <div class="project-item">
           <img src="images/project/project-6.jpg" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">La cuponera</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
@@ -321,7 +320,7 @@
         <div class="project-item">
           <img src="images/project/project-3.jpg" alt="project-image" class="img-fluid w-100">
           <div class="project-hover bg-secondary px-4 py-3">
-            <a href="#" class="text-white h4">Project title</a>
+            <a href="#" class="text-white h4">Game Booster</a>
             <a href="#"><i class="ti-link icon-xs text-white"></i></a>
           </div>
         </div>
