Error de escritura

--- a/portfolio.html
+++ b/portfolio.html
@@ -167,7 +167,7 @@
           <p>Proyectos desarrollados: </p>
           <ol>
             <li>Control de pasantías</li>
-            <li>*Save Our Pets</li>
+            <li>Game Booster</li>
           </ol>
         </div>
       </div>
