--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
             <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-facebook"></i></a></li>
             <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-twitter-alt"></i></a></li>
             <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-instagram"></i></a></li>
-            <li class="list-inline-item"><a class="d-block p-3 text-white" href="#"><i class="ti-github"></i></a></li>
+            <li class="list-inline-item"><a class="d-block p-3 text-white" href="www.github.com/"><i class="ti-github"></i></a></li>
           </ul>
         </div>
       </div>
