actualizacion de imagenes de la aplicacion

--- a/blog.html
+++ b/blog.html
@@ -178,9 +178,9 @@
               </p>
             </p>
 
-            <h4>Posibles imágenes de la aplicación</h4>
+            <h4>Imágenes de la aplicación</h4>
             <p class="font-weight-light font-italic">
-              *El diseño final de las pantallas puede diferir de las imágenes presentadas:
+              *Se presentan algunos de los modulos de la aplicacion:
             </p>
             <!-- ### start of the gallery definition ### -->
             <div id="nanogallery2" data-nanogallery2='{  
@@ -195,13 +195,13 @@
                      "topRight":  "playPauseButton, zoomButton, fullscreenButton, closeButton" }   
             }'>
               <img src="images/sop/Loader.png" data-ngsrc="images/sop/Loader.png"
-                data-nanogallery2-lightbox='{ "viewerToolbar": { "display": false } }' alt="Mockup Diseño de Loader" />
+                data-nanogallery2-lightbox='{ "viewerToolbar": { "display": false } }' alt="Diseño de Loader" />
               <img src="images/sop/Login.png" data-ngsrc="images/sop/Login.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Login" />
+                alt="Diseño de Login" />
               <img src="images/sop/Inicio.png" data-ngsrc="images/sop/Inicio.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Inicio" />
+                alt="Diseño de Inicio" />
               <img src="images/sop/Menu.png" data-ngsrc="images/sop/Menu.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Menú" />
+                alt="Diseño de Menú" />
               <img src="images/sop/Acuerdos-2.png" data-ngsrc="images/sop/Acuerdos-2.png" data-nanogallery2-lightbox
                 alt="Diseño de Acuerdos de Adopción" />
               <img src="images/sop/Adopción.png" data-ngsrc="images/sop/Adopción.png" data-nanogallery2-lightbox
@@ -209,15 +209,15 @@
               <img src="images/sop/Adopción-2.png" data-ngsrc="images/sop/Adopción-2.png" data-nanogallery2-lightbox
                 alt="Pantalla de Adopción-2" />
               <img src="images/sop/Perfil-1.png" data-ngsrc="images/sop/Perfil-1.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Perfil" />
+                alt="Diseño de Perfil" />
               <img src="images/sop/Listar.png" data-ngsrc="images/sop/Listar.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Listar" />
+                alt="Diseño de Listar" />
               <img src="images/sop/Agregar.png" data-ngsrc="images/sop/Agregar.png" data-nanogallery2-lightbox
                 alt="Mockup Diseño de Agregar" />
               <img src="images/sop/Agregar-1.png" data-ngsrc="images/sop/Agregar-1.png" data-nanogallery2-lightbox
                 alt="Diseño de Listbox" />
               <img src="images/sop/Actualizar.png" data-ngsrc="images/sop/Actualizar.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Actualizar" />
+                alt="Diseño de Actualizar" />
 
             </div>
             <!-- ### end of the gallery definition ### -->
