corregido imagenes de agregar

--- a/blog.html
+++ b/blog.html
@@ -213,11 +213,11 @@
               <img src="images/sop/Listar.png" data-ngsrc="images/sop/Listar.png" data-nanogallery2-lightbox
                 alt="Diseño de Listar" />
               <img src="images/sop/Agregar.png" data-ngsrc="images/sop/Agregar.png" data-nanogallery2-lightbox
-                alt="Mockup Diseño de Agregar" />
+                alt="Diseño de Agregar" />
               <img src="images/sop/Agregar-1.png" data-ngsrc="images/sop/Agregar-1.png" data-nanogallery2-lightbox
-                alt="Diseño de Listbox" />
+                alt="Diseño de Vacuna" />
               <img src="images/sop/Actualizar.png" data-ngsrc="images/sop/Actualizar.png" data-nanogallery2-lightbox
-                alt="Diseño de Actualizar" />
+                alt="Diseño de Especie" />
 
             </div>
             <!-- ### end of the gallery definition ### -->
