--- a/blog.html
+++ b/blog.html
@@ -198,20 +198,44 @@
                 data-nanogallery2-lightbox='{ "viewerToolbar": { "display": false } }' alt="Diseño de Loader" />
               <img src="images/sop/Login.png" data-ngsrc="images/sop/Login.png" data-nanogallery2-lightbox
                 alt="Diseño de Login" />
+                <img src="images/sop/Perfil-1.png" data-ngsrc="images/sop/Perfil-1.png" data-nanogallery2-lightbox
+                alt="Diseño de Perfil" />
+                <img src="images/sop/Perfil-2.png" data-ngsrc="images/sop/Perfil-2.png" data-nanogallery2-lightbox
+                alt="Edición de Perfil" />
               <img src="images/sop/Inicio.png" data-ngsrc="images/sop/Inicio.png" data-nanogallery2-lightbox
                 alt="Diseño de Inicio" />
               <img src="images/sop/Menu.png" data-ngsrc="images/sop/Menu.png" data-nanogallery2-lightbox
                 alt="Diseño de Menú" />
+                <!--
               <img src="images/sop/Acuerdos-2.png" data-ngsrc="images/sop/Acuerdos-2.png" data-nanogallery2-lightbox
                 alt="Diseño de Acuerdos de Adopción" />
               <img src="images/sop/Adopción.png" data-ngsrc="images/sop/Adopción.png" data-nanogallery2-lightbox
                 alt="Diseño de Adopción" />
               <img src="images/sop/Adopción-2.png" data-ngsrc="images/sop/Adopción-2.png" data-nanogallery2-lightbox
                 alt="Pantalla de Adopción-2" />
-              <img src="images/sop/Perfil-1.png" data-ngsrc="images/sop/Perfil-1.png" data-nanogallery2-lightbox
-                alt="Diseño de Perfil" />
-              <img src="images/sop/Listar.png" data-ngsrc="images/sop/Listar.png" data-nanogallery2-lightbox
-                alt="Diseño de Listar" />
+                -->
+              
+              <img src="images/sop/Raza-1.png" data-ngsrc="images/sop/Raza-1.png" data-nanogallery2-lightbox
+                alt="Listado de Razas" />
+                <img src="images/sop/Raza-2.png" data-ngsrc="images/sop/Raza-2.png" data-nanogallery2-lightbox
+                alt="Agregando Raza" />
+                <img src="images/sop/Raza-3.png" data-ngsrc="images/sop/Raza-3.png" data-nanogallery2-lightbox
+                alt="Editando de Raza-3" />
+
+                <img src="images/sop/Especie-1.png" data-ngsrc="images/sop/Especie-1.png" data-nanogallery2-lightbox
+                alt="Listado de Especies" />
+                <img src="images/sop/Especie-2.png" data-ngsrc="images/sop/Especie-2.png" data-nanogallery2-lightbox
+                alt="Agregando Especie" />
+                <img src="images/sop/Especie-3.png" data-ngsrc="images/sop/Especie-3.png" data-nanogallery2-lightbox
+                alt="Editando de Especie-3" />
+
+                <img src="images/sop/Vacuna-1.png" data-ngsrc="images/sop/Vacuna-1.png" data-nanogallery2-lightbox
+                alt="Listado de Vacunas" />
+                <img src="images/sop/Vacuna-2.png" data-ngsrc="images/sop/Vacuna-2.png" data-nanogallery2-lightbox
+                alt="Agregando Vacuna" />
+                <img src="images/sop/Vacuna-3.png" data-ngsrc="images/sop/Vacuna-3.png" data-nanogallery2-lightbox
+                alt="Editando de Vacuna-3" />
+
               <img src="images/sop/Agregar.png" data-ngsrc="images/sop/Agregar.png" data-nanogallery2-lightbox
                 alt="Diseño de Agregar" />
               <img src="images/sop/Agregar-1.png" data-ngsrc="images/sop/Agregar-1.png" data-nanogallery2-lightbox
